[emacs] Configure shortdoc

--- a/emacs.org
+++ b/emacs.org
@@ -5942,6 +5942,17 @@ Inherit Clojure snippets.
     ("C-c d c" . describe-char))
 #+END_SRC
 
+*** shortdoc - Group summaries
+#+BEGIN_SRC emacs-lisp
+  (use-package shortdoc
+    :defer t
+    :config
+    (use-package link-hint
+      :bind
+      (:map shortdoc-mode-map
+       ("j" . link-hint-open-link))))
+#+END_SRC
+
 *** helpful - Partial help replacement
 [[https://github.com/Wilfred/helpful][helpful (GitHub)]]
 
