--- a/emacs.org
+++ b/emacs.org
@@ -8646,7 +8646,7 @@ Define theme infrastructure.
   (defun koek-thm/darkp (&optional theme)
     "Return whether THEME is a dark theme.
   Optional THEME is a symbol, the theme to interrogate and defaults
-  to the current theme."
+  to the last enabled theme."
     (memq (or theme (car custom-enabled-themes)) koek-thm/dark-themes))
 #+END_SRC
 
