[emacs] Fix setting system theme

--- a/emacs.org
+++ b/emacs.org
@@ -633,7 +633,10 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
      ("C-c z z" . koek-wm/suspend))
     :config
     (add-hook 'koek-thm/enable-hook #'koek-wm/update-xsettingsd-preset)
-    (add-hook 'koek-thm/enable-hook #'koek-wm/update-gtk-theme-preference))
+    (add-hook 'koek-thm/enable-hook #'koek-wm/update-gtk-theme-preference)
+    ;; When exwm loads, theme is already enabled
+    (koek-wm/update-xsettingsd-preset)
+    (koek-wm/update-gtk-theme-preference))
 
   (use-package exwm-core
     :when (koek-wm/exwm-session-p)
